// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`BpkPrompts should render correctly with default props 1`] = `
<DocumentFragment>
  <div
    class="css-j7qwjs"
    data-backpack-ds-component="Prompts"
    data-testid="bpk-prompts"
    role="presentation"
  >
    <div
      class="bpk-prompt-list__scroll"
    >
      <div
        class="bpk-mobile-scroll-container"
        data-backpack-ds-component="MobileScrollContainer"
        style="height: auto;"
      >
        <div
          class="bpk-mobile-scroll-container__scroller"
        >
          <div
            class="bpk-mobile-scroll-container__inner"
          >
            <ul
              aria-label="Suggestions"
              class="bpk-prompt-list__list"
            >
              <li
                class="bpk-prompt-list__item"
              >
                <div
                  aria-label="I need a small automatic car for 2 people with unlimited mileage"
                  class="bpk-card-v2 bpk-card-v2--cars-prompt bpk-card-v2--surface-low-contrast"
                  data-backpack-ds-component="Prompt"
                  data-testid="bpk-prompt"
                  role="button"
                  tabindex="0"
                >
                  <div
                    class="bpk-prompt__content"
                  >
                    <span
                      style="line-height: 1rem; display: inline-block; margin-top: 0rem; vertical-align: top;"
                    >
                      <svg
                        aria-hidden="true"
                        fill="rgb(0, 98, 227)"
                        height="1rem"
                        viewBox="0 0 24 24"
                        width="1rem"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M10.5 4.5a6 6 0 1 0 0 12 6 6 0 0 0 0-12m-9 6a9 9 0 1 1 16.336 5.215l4.225 4.224a1.5 1.5 0 0 1-2.122 2.122l-4.224-4.225A9 9 0 0 1 1.5 10.5"
                        />
                      </svg>
                    </span>
                    <div
                      class="bpk-prompt__text-wrapper"
                    >
                      <span
                        class="bpk-text bpk-text--sm bpk-text--text-primary"
                        data-backpack-ds-component="Text"
                      >
                        I need a small automatic car for 2 people with unlimited mileage
                      </span>
                    </div>
                  </div>
                </div>
              </li>
              <li
                class="bpk-prompt-list__item"
              >
                <div
                  aria-label="What insurance do I need?"
                  class="bpk-card-v2 bpk-card-v2--cars-prompt bpk-card-v2--surface-low-contrast"
                  data-backpack-ds-component="Prompt"
                  data-testid="bpk-prompt"
                  role="button"
                  tabindex="0"
                >
                  <div
                    class="bpk-prompt__content"
                  >
                    <span
                      style="line-height: 1rem; display: inline-block; margin-top: 0rem; vertical-align: top;"
                    >
                      <svg
                        aria-hidden="true"
                        fill="rgb(0, 98, 227)"
                        height="1rem"
                        viewBox="0 0 24 24"
                        width="1rem"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M10.5 4.5a6 6 0 1 0 0 12 6 6 0 0 0 0-12m-9 6a9 9 0 1 1 16.336 5.215l4.225 4.224a1.5 1.5 0 0 1-2.122 2.122l-4.224-4.225A9 9 0 0 1 1.5 10.5"
                        />
                      </svg>
                    </span>
                    <div
                      class="bpk-prompt__text-wrapper"
                    >
                      <span
                        class="bpk-text bpk-text--sm bpk-text--text-primary"
                        data-backpack-ds-component="Text"
                      >
                        What insurance do I need?
                      </span>
                    </div>
                  </div>
                </div>
              </li>
              <li
                class="bpk-prompt-list__item"
              >
                <div
                  aria-label="Do I need to pay a deposit?"
                  class="bpk-card-v2 bpk-card-v2--cars-prompt bpk-card-v2--surface-low-contrast"
                  data-backpack-ds-component="Prompt"
                  data-testid="bpk-prompt"
                  role="button"
                  tabindex="0"
                >
                  <div
                    class="bpk-prompt__content"
                  >
                    <span
                      style="line-height: 1rem; display: inline-block; margin-top: 0rem; vertical-align: top;"
                    >
                      <svg
                        aria-hidden="true"
                        fill="rgb(0, 98, 227)"
                        height="1rem"
                        viewBox="0 0 24 24"
                        width="1rem"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M10.5 4.5a6 6 0 1 0 0 12 6 6 0 0 0 0-12m-9 6a9 9 0 1 1 16.336 5.215l4.225 4.224a1.5 1.5 0 0 1-2.122 2.122l-4.224-4.225A9 9 0 0 1 1.5 10.5"
                        />
                      </svg>
                    </span>
                    <div
                      class="bpk-prompt__text-wrapper"
                    >
                      <span
                        class="bpk-text bpk-text--sm bpk-text--text-primary"
                        data-backpack-ds-component="Text"
                      >
                        Do I need to pay a deposit?
                      </span>
                    </div>
                  </div>
                </div>
              </li>
            </ul>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BpkPrompts should render with showVisibleScrollbar 1`] = `
<DocumentFragment>
  <div
    class="css-j7qwjs"
    data-backpack-ds-component="Prompts"
    data-testid="bpk-prompts"
    role="presentation"
  >
    <div
      class="bpk-prompt-list__scroll"
    >
      <div
        class="bpk-mobile-scroll-container"
        data-backpack-ds-component="MobileScrollContainer"
        style="height: auto;"
      >
        <div
          class="bpk-mobile-scroll-container__scroller bpk-mobile-scroll-container__showScrollbar"
        >
          <div
            class="bpk-mobile-scroll-container__inner"
          >
            <ul
              aria-label="Suggestions"
              class="bpk-prompt-list__list"
            >
              <li
                class="bpk-prompt-list__item"
              >
                <div
                  aria-label="I need a small automatic car for 2 people with unlimited mileage"
                  class="bpk-card-v2 bpk-card-v2--cars-prompt bpk-card-v2--surface-low-contrast"
                  data-backpack-ds-component="Prompt"
                  data-testid="bpk-prompt"
                  role="button"
                  tabindex="0"
                >
                  <div
                    class="bpk-prompt__content"
                  >
                    <span
                      style="line-height: 1rem; display: inline-block; margin-top: 0rem; vertical-align: top;"
                    >
                      <svg
                        aria-hidden="true"
                        fill="rgb(0, 98, 227)"
                        height="1rem"
                        viewBox="0 0 24 24"
                        width="1rem"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M10.5 4.5a6 6 0 1 0 0 12 6 6 0 0 0 0-12m-9 6a9 9 0 1 1 16.336 5.215l4.225 4.224a1.5 1.5 0 0 1-2.122 2.122l-4.224-4.225A9 9 0 0 1 1.5 10.5"
                        />
                      </svg>
                    </span>
                    <div
                      class="bpk-prompt__text-wrapper"
                    >
                      <span
                        class="bpk-text bpk-text--sm bpk-text--text-primary"
                        data-backpack-ds-component="Text"
                      >
                        I need a small automatic car for 2 people with unlimited mileage
                      </span>
                    </div>
                  </div>
                </div>
              </li>
              <li
                class="bpk-prompt-list__item"
              >
                <div
                  aria-label="What insurance do I need?"
                  class="bpk-card-v2 bpk-card-v2--cars-prompt bpk-card-v2--surface-low-contrast"
                  data-backpack-ds-component="Prompt"
                  data-testid="bpk-prompt"
                  role="button"
                  tabindex="0"
                >
                  <div
                    class="bpk-prompt__content"
                  >
                    <span
                      style="line-height: 1rem; display: inline-block; margin-top: 0rem; vertical-align: top;"
                    >
                      <svg
                        aria-hidden="true"
                        fill="rgb(0, 98, 227)"
                        height="1rem"
                        viewBox="0 0 24 24"
                        width="1rem"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M10.5 4.5a6 6 0 1 0 0 12 6 6 0 0 0 0-12m-9 6a9 9 0 1 1 16.336 5.215l4.225 4.224a1.5 1.5 0 0 1-2.122 2.122l-4.224-4.225A9 9 0 0 1 1.5 10.5"
                        />
                      </svg>
                    </span>
                    <div
                      class="bpk-prompt__text-wrapper"
                    >
                      <span
                        class="bpk-text bpk-text--sm bpk-text--text-primary"
                        data-backpack-ds-component="Text"
                      >
                        What insurance do I need?
                      </span>
                    </div>
                  </div>
                </div>
              </li>
              <li
                class="bpk-prompt-list__item"
              >
                <div
                  aria-label="Do I need to pay a deposit?"
                  class="bpk-card-v2 bpk-card-v2--cars-prompt bpk-card-v2--surface-low-contrast"
                  data-backpack-ds-component="Prompt"
                  data-testid="bpk-prompt"
                  role="button"
                  tabindex="0"
                >
                  <div
                    class="bpk-prompt__content"
                  >
                    <span
                      style="line-height: 1rem; display: inline-block; margin-top: 0rem; vertical-align: top;"
                    >
                      <svg
                        aria-hidden="true"
                        fill="rgb(0, 98, 227)"
                        height="1rem"
                        viewBox="0 0 24 24"
                        width="1rem"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M10.5 4.5a6 6 0 1 0 0 12 6 6 0 0 0 0-12m-9 6a9 9 0 1 1 16.336 5.215l4.225 4.224a1.5 1.5 0 0 1-2.122 2.122l-4.224-4.225A9 9 0 0 1 1.5 10.5"
                        />
                      </svg>
                    </span>
                    <div
                      class="bpk-prompt__text-wrapper"
                    >
                      <span
                        class="bpk-text bpk-text--sm bpk-text--text-primary"
                        data-backpack-ds-component="Text"
                      >
                        Do I need to pay a deposit?
                      </span>
                    </div>
                  </div>
                </div>
              </li>
            </ul>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
